fix whitespace in code/pre blocks

--- a/docs/public/css/fog.css
+++ b/docs/public/css/fog.css
@@ -96,6 +96,7 @@ pre {
   -moz-border-radius: 0.5em;
   border-radius: 0.5em;
   margin: 1em;
+  white-space: pre;
 }
 
 pre code {
